# LinuxCppTests

./: .gitignore  README.md
CMakeProjectTemplate/: CMakeLists.txt
CMakeTest1/: CMakeLists.txt
CMakeTest1/include/: B.h
CMakeTest1/source/: A.cpp
Cpp1720Tests/: CMakeLists.txt  main.cpp
Cpp1720Tests/include/: any.h  if_constexpr.h  if_init.h  mauby_unused.h  test_helper.h
Cpp20Tests/: CMakeLists.txt
CppDockerExample/: CMakeLists.txt  Dockerfile  main.cpp
CppQuizTests/: CMakeLists.txt  main.cpp
CppQuizTests/include/: Quiz207.h  Quiz219.h  Quiz244.h  Quiz365.h  Quiz38.h  QuizHelper.h  TestClasses.h
CppStandardTests/: CMakeLists.txt  main.cpp
CppStandardTests/doc/: TODO.md  containers_and_complexity.md  cpp11_features.md  cpp14_features.md  cpp17_features.md  cpp20_features.md  hardware_performance_tricks.md  parallel_programming.md  signed_values.md  templates.md
CppStandardTests/include/: aggregate_initialization.h  any.h  array.h  async.h  if_constexpr.h  if_init.h  lambda_capture_init.h  mayby_unused.h  nodiscard.h  print_utility.h  structure_binding.h  templates.h  test_helper.h  test_template.h  use_optional.h  use_threads.h  use_variant.h  user_defined_literals.h
CppStandardTests/include/templates/: folding.h  sfinae_vs_if_constexpr.h  specialization.h  using.h  variadic.h
CppStandardTests/source/modules/: first_test_module.cppm
CppStandardTests/tests/: any.cpp  conditional_variable.cpp  even_odd_test.cpp  lambda.cpp  variant.cpp
CppStandardTests/tests/cpp11/: call_once.cpp  promise_future.cpp
CppStandardTests/tests/cpp17/: any.cpp  for_each.cpp  optional.cpp  variant.cpp
CppStandardTests/tests/cpp20/: jthread.cpp  latch.cpp  ranges.cpp
CppStandardTests/tests/cpp20/coroutines/: data_generator.cpp  fibonacci.cpp  multiplier.cpp  simple_communication_examples.cpp  string_generator.cpp
CppStandardTests/tests/templates/: singleton_with_without_parameters.cpp
JsonTest1/: CMakeLists.txt  main.cpp
JsonTest1/include/: ConnectionInfo.h  ConnectionInfoJson.h  DataJson.h
JsonTest1/source/: ConnectionInfo.cpp
MakefileTest1/: Makefile  main.cpp
MakefileTest1/include/: A.h
MakefileTest1/source/: B.cpp
MapValuesTemplate/: CMakeLists.txt  main.cpp
MemorySizeTest/: CMakeLists.txt  main.cpp
OnlineConfigurator/: CMakeLists.txt  TODO
OnlineConfigurator/BackEnd/: CMakeLists.txt  main.cpp
OnlineConfigurator/BackEnd/include/: BaseResource.h  EntityResource.h  GetEntitySubEntitiesResource.h  ProjectResource.h  PropertyResource.h  ResourceHelper.h  SubEntitiesResource.h  UpdatePropertyResource.h
OnlineConfigurator/BackEnd/source/: BaseResource.cpp  EntityResource.cpp  GetEntityResource.cpp  GetEntitySubEntitiesResource.cpp  GetProjectResource.cpp  GetPropertyResource.cpp  ProjectResource.cpp  PropertyResource.cpp  ResourceHelper.cpp  SubEntitiesResource.cpp  UpdatePropertyResource.cpp
OnlineConfigurator/DataClasses/: CMakeLists.txt  Makefile
OnlineConfigurator/DataClasses/include/: ConnectionInformation.h  Entity.h  ErrorProcessing.h  Project.h  Property.h  Variant.h  VoltageLimits.h
OnlineConfigurator/DataClasses/include/core/: Entity.h  EntityBuildHelper.h  EntityFactory.h  EntityPool.h  EntitySerializer.h  EntitySerializerFactory.h  Property.h  PropertyEditorInfo.h  Singleton.h  UuidSerializer.h  Variant.h  VariantSerializer.h
OnlineConfigurator/DataClasses/interfaces/: IEntity.h  IFactory.h  ISerializer.h
OnlineConfigurator/DataClasses/source/: ConnectionInformation.cpp  Entity.cpp  ErrorProcessing.cpp  Project.cpp  Property.cpp  Variant.cpp  VoltageLimits.cpp
OnlineConfigurator/DataClasses/source/core/: Entity.cpp  EntityFactory.cpp  EntityPool.cpp  EntitySerializer.cpp  EntitySerializerFactory.cpp  Property.cpp  PropertyEditorInfo.cpp  UuidSerializer.cpp  Variant.cpp  VariantSerializer.cpp
OnlineConfigurator/FrontEnd/: CMakeLists.txt  main.cpp
OnlineConfigurator/FrontEnd/include/: Application.h  BackEndRequest.h  BuildUIHelper.h  ConnectionInformationWidget.h  HttpClientUser.h  UrlBuilder.h  WaitingWindow.h  WtGlobal.h
OnlineConfigurator/FrontEnd/include/core/: ApplicationErrorNotifier.h  BuildUIHelper.h  EntityGridWidget.h  EntityGroupBoxWidget.h  HttpClientUser.h
OnlineConfigurator/FrontEnd/source/: Application.cpp  ApplicationErrorNotifier.cpp  BackEndRequest.cpp  BuildUIHelper.cpp  ConnectionInformationWidget.cpp  HttpClientUser.cpp  UrlBuilder.cpp  WaitingWindow.cpp
OnlineConfigurator/FrontEnd/source/core/: BuildUIHelper.cpp  EntityGridWidget.cpp  EntityGroupBoxWidget.cpp  HttpClientUser.cpp  UrlBuilder.cpp
OnlineConfigurator/OnlineConfigurator/: CMakeLists.txt  main.cpp
OnlineConfigurator/OnlineConfigurator/include/: GetEntityResource.h  GetProjectResource.h  GetPropertyResource.h  ResourceHelper.h
OnlineConfigurator/OnlineConfigurator/source/: BaseResource.cpp  GetEntityResource.cpp  GetProjectResource.cpp
OnlineConfigurator/Tests/: CMakeLists.txt  main.cpp
QtCMakeExample/: CMakeLists.txt
QtCMakeExample/src/: CMakeLists.txt
QtQMLTest1/: .gitignore  QtQMLTest1  main.cpp  main.qml  qmake_resources.qrc
QtWidgetTest1/: CMakeLists.txt
QtWidgetTest2/: .gitignore  QtWidgetTest2.pro
RestbedserverTest1/: CMakeLists.txt  main.cpp
TreeCompareBenchmark/: CMakeLists.txt  main.cpp
TreeCompareBenchmark/include/: CompareFunctions.h  TreeGenerator.h  TreeNode.h
WebServerInDocker/: CMakeLists.txt  Dockerfile  docker-compose.yaml  main.cpp
WebSocketTest/: CMakeLists.txt  main.cpp
WtChartTest/: CMakeLists.txt  main.cpp
WtTest1/: CMakeLists.txt  Makefile  main.cpp
